Add possibility to break personal union